--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>de.fischzegel</groupId>
     <artifactId>VisZegel</artifactId>
     <version>1.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>VisZegel</name>
 
