--- a/pom.xml
+++ b/pom.xml
@@ -190,6 +190,10 @@
 				<groupId>org.eclipse.jetty</groupId>
 				<version>9.2.13.v20150730</version>
 				<artifactId>jetty-maven-plugin</artifactId>
+				<configuration>
+					<scanIntervalSeconds>0</scanIntervalSeconds>
+
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
