--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,11 +4,13 @@ log4j.rootLogger=WARN, out
 log4j.appender.VIS=org.apache.log4j.ConsoleAppender
 log4j.appender.VIS.layout=org.apache.log4j.PatternLayout
 log4j.appender.VIS.layout.ConversionPattern=%d %p (%t) [%c] - %m%n
+log4j.appender.VIS.encoding=UTF-8
 log4j.additivity.de.fischzegel.viszegel=false
 log4j.logger.de.fischzegel.viszegel=DEBUG, VIS
 
 log4j.appender.out=org.apache.log4j.ConsoleAppender
 log4j.appender.out.layout=org.apache.log4j.PatternLayout
 log4j.appender.out.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+log4j.appender.out.encoding=UTF-8
 log4j.logger.com.sandbox.controller.SandboxController=DEBUG
 log4j.logger.org.hibernate=ERROR
