--- a/pom.xml
+++ b/pom.xml
@@ -182,6 +182,7 @@
 				<configuration>
 					<source>1.7</source>
 					<target>1.7</target>
+					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
 
@@ -190,6 +191,9 @@
 				<groupId>org.eclipse.jetty</groupId>
 				<version>9.2.13.v20150730</version>
 				<artifactId>jetty-maven-plugin</artifactId>
+				<configuration>
+					<encoding>UTF-8</encoding>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
